[package]
name = "notifiers"
version = "0.1.0"
authors = ["dignifiedquire <me@dignifiedquire.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[dependencies]
apns-h2 = "0.11.0"
anyhow = "1.0.32"
axum = "0.7.5"
base64 = "0.22.1"
chrono = { version = "0.4.41", default-features = false }
femme = "2.1.0"
humantime = "2.3.0"
log = "0.4.29"
pgp = "0.14.2"
prometheus-client = "0.22.2"
rand = "0.8.5"
reqwest = { version = "0.12.5", features = ["native-tls-vendored"] }
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.122"
sled = "0.34.2"
structopt = "0.3.15"
tokio = { version = "1.50.0", features = ["full"] }
web-push-native = "0.4.0"
yup-oauth2 = "9.0.0"
parking_lot = "0.12.5"

[dev-dependencies]
tempfile = "3"
